--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="http://fonts.googleapis.com/css?family=Roboto:300,400,700|"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap"
       rel="stylesheet"
-      type="text/css"
     />
   </head>
 
@@ -83,7 +84,11 @@
                 <p class="custom" id="custom-today"></p>
                 <div class="forecast-info">
                   <span
-                    ><img height="20px" src="images\icon-umberella.png" alt="" />
+                    ><img
+                      height="20px"
+                      src="images\icon-umberella.png"
+                      alt=""
+                    />
                     20%</span
                   >
                   <span
