start adding css variable for colors

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="#">
               <img src="images/logo@2x.png" alt="" />
               <div class="logo-name">
-                <h2>Weatehr</h2>
+                <h2>Weather</h2>
                 <small>Tagline goes here</small>
               </div>
             </a>
